# tofea

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  topopt_2d.py  topopt_3d.py
.github/workflows/: deploy_docs.yml  run_tests.yml  tests.yml
docs/: index.md  reference.md
examples/: compliance_2d.py  compliance_3d.py  heat_2d.py  heat_3d.py
reference/: index.html
search/: search_index.json
tests/: conftest.py  test_boundary_conditions.py  test_elements.py  test_fea2d.py  test_primitives.py  test_solvers.py
tests/integration/: test_adjoint_paths.py  test_boundary_conditions.py  test_fea2d.py  test_solver_performance.py
tests/unit/tofea/: test___init__.py  test_boundary_conditions.py  test_elements.py  test_fea2d.py  test_primitives.py  test_solvers.py
tofea/: __init__.py  boundary_conditions.py  elements.py  fea2d.py  fea3d.py  primitives.py  solvers.py  topopt_helpers.py
tofem/: __init__.py  elements.py  fem2d.py  fem3d.py
