[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "tofea"
authors = [{ name = "Yannick Augenstein" }]
description = "Simple Finite Element Analysis for Topology Optimization"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sympy>=1.13",
    "autograd>=1.8",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
examples = ["nlopt", "matplotlib"]
all = ["tofea[tests,examples]"]
dev = ["tofea[all]", "ruff", "mypy", "pre-commit"]

[project.urls]
Source = "https://github.com/mrbaozi/tofea"

[tool.ruff]
select = ["E", "W", "F", "B", "I", "UP", "C4", "NPY", "PT", "SIM", "ARG", "PERF", "PTH"]
fixable = ["ALL"]
ignore = ["F821"]
unfixable = ["F401", "F841"]
line-length = 88
target-version = "py310"

[tool.mypy]
mypy_strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
