[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "tofea"
authors = [{ name = "Yannick Augenstein" }]
description = "Simple Finite Element Analysis for Topology Optimization"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "autograd>=1.8",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
examples = ["nlopt", "matplotlib"]
all = ["tofea[tests,examples]"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material"]
dev = ["tofea[all,docs]", "ruff", "mypy", "pre-commit"]

[project.urls]
Source = "https://github.com/mrbaozi/tofea"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "B",
  "I",
  "UP",
  "C4",
  "NPY",
  "PT",
  "SIM",
  "ARG",
  "PERF",
  "PTH",
  "TID",
  "PLE",
  "PLC",
  "RSE",
  "PIE",
  "RUF",
]
fixable = ["ALL"]
ignore = ["F821"]
unfixable = ["F401", "F841"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--doctest-modules"
testpaths = ["tofea", "tests"]
